gitops/namespaces/base/infra/matchbox/default/rpc-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/hostname: matchbox-rpc.${CLUSTER_NAME}.${DNS_INT_ZONE}
  name: matchbox-rpc
  namespace: infra
spec:
  externalTrafficPolicy: Local
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: rpc
    port: 8080
    protocol: TCP
    targetPort: https
  selector:
    app.kubernetes.io/name: matchbox
  type: LoadBalancer
