gitops/namespaces/base/infra/matchbox/default/service-rpc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: matchbox-rpc
  annotations:
    #traefik.ingress.kubernetes.io/service.serversscheme: h2c
    traefik.ingress.kubernetes.io/service.serversscheme: https
spec:
  type: ClusterIP
  selector:
    name: matchbox
  ports:
    - name: https
      protocol: TCP
      port: 8081
      targetPort: 8081
