gitops/namespaces/base/infra/matchbox/default/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: matchbox
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: h2c
spec:
  type: ClusterIP
  selector:
    name: matchbox
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: https
      protocol: TCP
      port: 8081
      targetPort: 8081
