gitops/namespaces/base/infra/matchbox/default/ingress-rpc.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: matchbox-rpc
spec:
  entryPoints:
    - tcp
  routes:
    - match: HostSNI(`*`)
      services:
        - name: matchbox
          port: 8081
  tls:
    passthrough: true
