gitops/namespaces/base/infra/matchbox/default/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: matchbox
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: "traefik"
  rules:
  - host: matchbox.${CLUSTER_NAME}.${DNS_INT_ZONE}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: matchbox
            port:
              number: 8080
  tls:
  - hosts:
    - "matchbox.${CLUSTER_NAME}.${DNS_INT_ZONE}"
    secretName: matchbox-${CLUSTER_NAME}-rabbito-tls
